--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
+    "recharts": "^2.12.7",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
